--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="online.merkatos.prexocertoonline">
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -17,14 +16,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
+        <!--<activity
             android:name=".ui.login.StoreManagerLoginActivity"
             android:label="@string/title_activity_store_manager_login"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="online.merkatos.prexocertoonline.MainActivity" />
-        </activity>
+        </activity>-->
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -42,12 +41,12 @@
 
         </activity>
 
-        <meta-data
+        <!--<meta-data
             android:name="GooglePlayMap"
-            android:value="AIzaSyDvxIPFE2ZGbv2tMgg9GadVeorwxsKvpHc" /> <!-- AIzaSyDvxIPFE2ZGbv2tMgg9GadVeorwxsKvpHc -->
+            android:value="AIzaSyDvxIPFE2ZGbv2tMgg9GadVeorwxsKvpHc" /> &lt;!&ndash; AIzaSyDvxIPFE2ZGbv2tMgg9GadVeorwxsKvpHc &ndash;&gt;
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-6512186262356871~6568920742" />
+            android:value="ca-app-pub-6512186262356871~6568920742" />-->
     </application>
 
 </manifest>
